qty-macros/tests/ui/non_enum.stderr
error: expected `enum`
  --> tests/ui/non_enum.rs:13:5
   |
13 | pub struct TestStruct {
   |     ^^^^^^
